--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,14 @@ aside {
     width: 15%;
 }
 
+table a {
+    text-decoration: none;
+}
+
+ul a {
+    text-decoration: none;
+}
+
 .listEl {
     padding-top: 10px;
 }
@@ -48,4 +56,8 @@ main {
 .tableDiv {
     max-height: 60%;
     overflow: auto;
+}
+
+.driverSearchList {
+    list-style:none;
 }
